docs(swagger): regenerate swagger docs with new swagger tags in statistics
